Jetty 12 immutable ee10 configurations (#9724)
* Immutable EE10 Configurations